--- a/src/global.scss
+++ b/src/global.scss
@@ -99,8 +99,8 @@
   }
 
   ion-content {
-    --background: url(assets/images/fondo.jpg);
-    --ion-background-color:#085500;
+    --background: #20bf6b;
+    --ion-background-color:#08550000;
   }
 
   ion-checkbox {
