--- a/src/app/pagos/pagos.page.html
+++ b/src/app/pagos/pagos.page.html
@@ -16,7 +16,8 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
     <ion-item-group *ngFor='let pago of pagos; index as i'>
       <ion-item *ngIf="(i+1)%2 == 0" color="color">
         <ion-button slot="end" color="success" (click)="updatePagos(pago.id)">ACTUALIZAR</ion-button>
