--- a/src/app/garantes/garantes.page.html
+++ b/src/app/garantes/garantes.page.html
@@ -17,6 +17,9 @@
 </ion-header>
 
 <ion-content>
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
   <ion-list>
     <ion-item-group *ngFor='let garante of garantes; index as i'>
       <ion-item *ngIf="(i+1)%2 == 0" color="color">
