--- a/src/app/reportes/reporte.page.html
+++ b/src/app/reportes/reporte.page.html
@@ -12,6 +12,8 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
   <ion-list>
     <ion-item-group *ngFor='let reporte of reportes; index as i'>
       <ion-item *ngIf="(i+2)%2 ==0" color="color">
