--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,8 +1,11 @@
 <ion-header>
 </ion-header>
 
-<ion-content> 
-  <br><br><br><br><br><br><br>
+<ion-content>
+  <p class="bienvenido">Bienvenido/a a</p>
+   <br><br><br><br>
+   <img class="img-logo" src="assets/images/logo-mini.png">
+  <br><br><br>
     <ion-card color="light">
       <form [formGroup]="registrationForm" (ngSubmit)="submit()">
         <ion-list>
