--- a/src/app/reportes/reporte-detalle/reporte-detalle.page.html
+++ b/src/app/reportes/reporte-detalle/reporte-detalle.page.html
@@ -38,8 +38,7 @@
         <img src="{{reporte?.cover}}"></h1></ion-label>
        </ion-item>
        <ion-item color="color" *ngIf="reporte?.cover == null">
-        <ion-label color="dark"><h1><b>Imagen:</b></h1></ion-label>
-   <ion-text color="dark">No se ha encontrado ninguna imagen</ion-text>
+        <ion-label color="dark" text-wrap><h1><b>Imagen:</b>No se ha encontrado ninguna imagen</h1></ion-label>
          </ion-item>
       
   </ion-card>
