solucionado algunos errores

--- a/src/app/caja/movimientos/movimientos.page.html
+++ b/src/app/caja/movimientos/movimientos.page.html
@@ -9,6 +9,9 @@
   </ion-header>
 
 <ion-content>
+  <ion-item>
+    <h3>Saldo: $ {{saldo}}</h3>
+  </ion-item>
          <ion-item color="dark">
        <ion-label text-wrap>Fecha de registro</ion-label>
        <pre>    </pre>
