--- a/src/app/component/menu/menu.component.html
+++ b/src/app/component/menu/menu.component.html
@@ -9,14 +9,14 @@
     </ion-header>
   
     <ion-content>
-     
+   
         <ion-menu-toggle>
-          <ion-item color="color" [routerLink]="['/propiedades']">Propiedades</ion-item>
-          <ion-item color="colordos" [routerLink]="['/locadores']">Locadores</ion-item>
-          <ion-item color="color" [routerLink]="['/inquilinos']">Inquilinos</ion-item>
-          <ion-item color="colordos" [routerLink]="['/garantes']">Garantes</ion-item>
-          <ion-item color="color" [routerLink]="['/contratos']">Contratos</ion-item>
-          <ion-item color="colordos" [routerLink]="['/proveedores']">Proveedores</ion-item>
+          <ion-item color="colordos" [routerLink]="['/locadores']"><ion-icon name="person-outline" color="dark" ></ion-icon><pre>  </pre><p class="texto">Locadores</p> </ion-item>
+          <ion-item color="color" [routerLink]="['/inquilinos']"><ion-icon name="person-outline" color="dark"></ion-icon><pre>  </pre><p class="texto">Inquilinos</p></ion-item>
+          <ion-item color="colordos" [routerLink]="['/garantes']"><ion-icon name="person-outline" color="dark"></ion-icon><pre>  </pre><p class="texto">Garantes</p></ion-item>
+          <ion-item color="color" [routerLink]="['/propiedades']"><ion-icon name="home-outline" color="dark"></ion-icon><pre>  </pre><p class="texto">Propiedades</p></ion-item>
+          <ion-item color="colordos" [routerLink]="['/contratos']"><ion-icon name="reader-outline" color="dark"></ion-icon><pre>  </pre><p class="texto">Contratos</p></ion-item>
+          <ion-item color="color" [routerLink]="['/proveedores']"><ion-icon name="person-outline" color="dark"></ion-icon><pre>  </pre><p class="texto">Proveedores</p></ion-item>
           
         </ion-menu-toggle>
     
