--- a/src/app/propiedades/propiedad-add/propiedad-add.page.html
+++ b/src/app/propiedades/propiedad-add/propiedad-add.page.html
@@ -45,7 +45,7 @@
         </div>
 
         <ion-item color="dark">
-          <ion-label position="floating">Inventario</ion-label>
+          <p>Inventario</p>
           <ion-textarea>
             <ion-input inputmode="tipo" formControlName="inventario"></ion-input>
           </ion-textarea>
