--- a/src/global.scss
+++ b/src/global.scss
@@ -26,14 +26,14 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 :root {
-    --ion-color-colordos: #228c33;
+    --ion-color-colordos: #2ed573;
     --ion-color-colordos-rgb: 34,140,51;
     --ion-color-colordos-contrast: #ffffff;
     --ion-color-colordos-contrast-rgb: 255,255,255;
     --ion-color-colordos-shade: #1e7b2d;
     --ion-color-colordos-tint: #389847;
 
-    --ion-color-color: #2aac40;
+    --ion-color-color: #73dd94;
     --ion-color-color-rgb: 42,172,64;
     --ion-color-color-contrast: #ffffff;
     --ion-color-color-contrast-rgb: 255,255,255;
