--- a/src/app/caja/caja.page.html
+++ b/src/app/caja/caja.page.html
@@ -7,8 +7,9 @@
   <ion-title>Caja</ion-title>
 </ion-toolbar>
 </ion-header>
-
+<br>
 <ion-content [fullscreen]="true">
-  <ion-button (click)="movimientos()" size="large" expand="full">Movimientos</ion-button>
-  <ion-button (click)="pagos()" size="large" expand="full" color="secondary">Pagos</ion-button>
+  <ion-button (click)="movimientos()" size="large" expand="full" color="dark" shape="round">Movimientos</ion-button>
+  <br>
+  <ion-button (click)="pagos()" size="large" expand="full" color="dark" shape="round">Pagos</ion-button>
 </ion-content>
