--- a/src/app/inquilinos/inquilino-detalle/inquilino-detalle.page.html
+++ b/src/app/inquilinos/inquilino-detalle/inquilino-detalle.page.html
@@ -37,7 +37,7 @@
       <ion-label color="dark"><h1><b>Email: </b> {{inquilino?.email}}</h1></ion-label>
     </ion-item>
     <ion-item color="colordos">
-      <ion-label color="dark"><h1><b>Cuenta bancaria: </b> {{inquilino?.cuenta_bancaria}}</h1></ion-label>
+      <ion-label color="dark" text-wrap><h1><b>Cuenta bancaria: </b> {{inquilino?.cuenta_bancaria}}</h1></ion-label>
     </ion-item>
   </ion-card>
 </ion-content>
