--- a/src/app/lista-alquileres/lista-alquileres.page.html
+++ b/src/app/lista-alquileres/lista-alquileres.page.html
@@ -7,9 +7,9 @@
     <ion-title>Alquileres</ion-title>
   </ion-toolbar>
 </ion-header>
-
+<br>
 <ion-content [fullscreen]="true">
-   <ion-button (click)="alquileres_c()" size="large" expand="full">Alquileres cobrados</ion-button>
-   <ion-button (click)="alquileres_p()" size="large" expand="full" color="secondary">Alquileres pendientes</ion-button>
-   <ion-button (click)="alquileres_v()" size="large" expand="full" color="danger">Alquileres a vencer</ion-button>
+   <ion-button (click)="alquileres_c()" size="large" expand="full" shape="round">Alquileres cobrados</ion-button><br>
+   <ion-button (click)="alquileres_p()" size="large" expand="full" color="secondary" shape="round">Alquileres pendientes</ion-button><br>
+   <ion-button (click)="alquileres_v()" size="large" expand="full" color="danger" shape="round">Alquileres a vencer</ion-button>
 </ion-content>
